--- a/src/dialog.module.css
+++ b/src/dialog.module.css
@@ -18,7 +18,7 @@
     cursor: pointer;
 }
 .switchon{
-    z-index: 999999;
+    z-index: 999999000;
     width: 40px;
     height: 22px;
     background-color: white;
